--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1416,7 +1416,7 @@ a {
 }
 .cid-sFGThwwRWM {
   padding-top: 5rem;
-  padding-bottom: 6rem;
+  padding-bottom: 3rem;
   background-color: #000000;
 }
 .cid-sFGThwwRWM .mbr-media {
@@ -1481,6 +1481,11 @@ a {
 .cid-sFGThwwRWM .mbr-section-title {
   color: #ffffff;
 }
+.cid-tsqJax1oeE {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #000000;
+}
 .cid-sFGNGNNW5A {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1536,10 +1541,10 @@ a {
 .cid-sFGNGNNW5A .item-subtitle {
   text-align: left;
 }
-.cid-tsqJax1oeE {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  background-color: #232323;
+.cid-tsA6TIZGZi {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
 }
 .cid-sFGOTvnvck {
   padding-top: 6rem;
