--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1980,6 +1980,31 @@ a {
     left: -1rem;
   }
 }
+.cid-tsAq8Xg4Be {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tsAq8Xg4Be .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tsAq8Xg4Be .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tsAq8Xg4Be .video-wrapper iframe {
+  width: 100%;
+}
+.cid-tsAq8Xg4Be .mbr-section-title,
+.cid-tsAq8Xg4Be .mbr-section-subtitle,
+.cid-tsAq8Xg4Be .mbr-text {
+  text-align: center;
+}
 .cid-tsAhNNvPKr {
   padding-top: 6rem;
   padding-bottom: 0rem;
