--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1980,40 +1980,15 @@ a {
     left: -1rem;
   }
 }
-.cid-tsAq8Xg4Be {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-tsAq8Xg4Be .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tsAq8Xg4Be .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tsAq8Xg4Be .video-wrapper iframe {
-  width: 100%;
-}
-.cid-tsAq8Xg4Be .mbr-section-title,
-.cid-tsAq8Xg4Be .mbr-section-subtitle,
-.cid-tsAq8Xg4Be .mbr-text {
-  text-align: center;
-}
-.cid-tsAhNNvPKr {
-  padding-top: 6rem;
+.cid-tsArI4q1d4 {
+  padding-top: 3rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
-.cid-tsAhNNvPKr .mbr-fallback-image.disabled {
+.cid-tsArI4q1d4 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tsAhNNvPKr .mbr-fallback-image {
+.cid-tsArI4q1d4 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2022,12 +1997,12 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tsAhNNvPKr .video-wrapper iframe {
+.cid-tsArI4q1d4 .video-wrapper iframe {
   width: 100%;
 }
-.cid-tsAhNNvPKr .mbr-section-title,
-.cid-tsAhNNvPKr .mbr-section-subtitle,
-.cid-tsAhNNvPKr .mbr-text {
+.cid-tsArI4q1d4 .mbr-section-title,
+.cid-tsArI4q1d4 .mbr-section-subtitle,
+.cid-tsArI4q1d4 .mbr-text {
   text-align: center;
 }
 .cid-tsv6Q43Fro {
