create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2001,6 +2001,7 @@ a {
   width: 100%;
 }
 .cid-tsArI4q1d4 .mbr-section-title,
+.cid-tsArI4q1d4 .mbr-section-head,
 .cid-tsArI4q1d4 .mbr-section-subtitle,
 .cid-tsArI4q1d4 .mbr-text {
   text-align: center;
