--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2001,9 +2001,9 @@ a {
   width: 100%;
 }
 .cid-tsArI4q1d4 .mbr-section-title,
-.cid-tsArI4q1d4 .mbr-section-head,
 .cid-tsArI4q1d4 .mbr-section-subtitle,
-.cid-tsArI4q1d4 .mbr-text {
+.cid-tsArI4q1d4 .mbr-text,
+.cid-tsArI4q1d4 .mbr-section-head {
   text-align: center;
 }
 .cid-tsv6Q43Fro {
