--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -978,7 +978,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffe161;
+  background-color: #fccd07;
 }
 .cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1327,7 +1327,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffe161;
+  background-color: #fccd07;
 }
 .cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2100,7 +2100,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffe161;
+  background-color: #fccd07;
 }
 .cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2470,7 +2470,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffe161;
+  background-color: #fccd07;
 }
 .cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3176,7 +3176,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffe161;
+  background-color: #fccd07;
 }
 .cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
