create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2585,6 +2585,74 @@ a {
     left: -1rem;
   }
 }
+.cid-tDeueJXsIc {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-tDeueJXsIc .showAlerts {
+  display: block !important;
+}
+.cid-tDeueJXsIc .rowflexrev {
+  display: -webkit-flex;
+}
+.cid-tDeueJXsIc .title {
+  margin-bottom: 2rem;
+}
+.cid-tDeueJXsIc .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-tDeueJXsIc textarea.form-control {
+  min-height: 188px;
+}
+.cid-tDeueJXsIc LABEL {
+  color: #232323;
+  display: initial;
+}
+.cid-tDeueJXsIc .mbr-section-terms {
+  text-align: center;
+  color: #232323;
+  margin-bottom: 0px;
+}
+.cid-tDeueJXsIc .mbr-section-labels {
+  color: #232323;
+  padding: 0;
+  margin-bottom: .357em;
+  text-align: left;
+}
+.cid-tDeueJXsIc .mbr-section-autorespond {
+  text-align: left;
+  color: #232323;
+  margin-bottom: 0px;
+}
+.cid-tDeueJXsIc .mbr-section-gdpr {
+  text-align: left;
+  color: #232323;
+  margin-bottom: 0px;
+}
+.cid-tDeueJXsIc .alert {
+  margin-bottom: 0;
+}
+.cid-tDeueJXsIc .alert-success {
+  background-color: #70c770;
+}
+.cid-tDeueJXsIc .alert-danger {
+  background-color: #ff4a52;
+}
+.cid-tDeueJXsIc .btn {
+  display: inline-flex;
+}
+.cid-tDeueJXsIc .mbr-alert-success {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tDeueJXsIc .mbr-alert-danger {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tDeueJXsIc H2 {
+  color: #000000;
+}
 .cid-tAGaz5RBck {
   padding-top: 7rem;
   padding-bottom: 0rem;
