--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1587,73 +1587,29 @@ a {
   width: 100%;
   object-fit: cover;
 }
-.cid-tDerfQme3o {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-sFGTcFRqw0 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-tDerfQme3o .showAlerts {
-  display: block !important;
+.cid-sFGTcFRqw0 .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
 }
-.cid-tDerfQme3o .rowflexrev {
-  display: -webkit-flex;
-}
-.cid-tDerfQme3o .title {
-  margin-bottom: 2rem;
-}
-.cid-tDerfQme3o .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-tDerfQme3o textarea.form-control {
-  min-height: 188px;
-}
-.cid-tDerfQme3o LABEL {
-  color: #232323;
-  display: initial;
-}
-.cid-tDerfQme3o .mbr-section-terms {
+.cid-sFGTcFRqw0 form .mbr-section-btn {
   text-align: center;
-  color: #232323;
-  margin-bottom: 0px;
+  width: 100%;
 }
-.cid-tDerfQme3o .mbr-section-labels {
-  color: #232323;
-  padding: 0;
-  margin-bottom: .357em;
-  text-align: left;
-}
-.cid-tDerfQme3o .mbr-section-autorespond {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
-}
-.cid-tDerfQme3o .mbr-section-gdpr {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
-}
-.cid-tDerfQme3o .alert {
-  margin-bottom: 0;
-}
-.cid-tDerfQme3o .alert-success {
-  background-color: #70c770;
-}
-.cid-tDerfQme3o .alert-danger {
-  background-color: #ff4a52;
-}
-.cid-tDerfQme3o .btn {
+.cid-sFGTcFRqw0 form .mbr-section-btn .btn {
   display: inline-flex;
 }
-.cid-tDerfQme3o .mbr-alert-success {
-  text-align: center;
-  color: #ffffff;
+@media (max-width: 991px) {
+  .cid-sFGTcFRqw0 form .mbr-section-btn .btn {
+    width: 100%;
+  }
 }
-.cid-tDerfQme3o .mbr-alert-danger {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-tDerfQme3o H2 {
-  color: #000000;
+.cid-sFGTcFRqw0 textarea {
+  min-height: 10rem;
 }
 .cid-sFGVxOqzIN {
   padding-top: 15px;
@@ -2564,73 +2520,29 @@ a {
     left: -1rem;
   }
 }
-.cid-tDeueJXsIc {
-  padding-top: 120px;
-  padding-bottom: 90px;
+.cid-tDeH8YQJ2x {
+  padding-top: 10rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-tDeueJXsIc .showAlerts {
-  display: block !important;
+.cid-tDeH8YQJ2x .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
 }
-.cid-tDeueJXsIc .rowflexrev {
-  display: -webkit-flex;
-}
-.cid-tDeueJXsIc .title {
-  margin-bottom: 2rem;
-}
-.cid-tDeueJXsIc .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-tDeueJXsIc textarea.form-control {
-  min-height: 188px;
-}
-.cid-tDeueJXsIc LABEL {
-  color: #232323;
-  display: initial;
-}
-.cid-tDeueJXsIc .mbr-section-terms {
+.cid-tDeH8YQJ2x form .mbr-section-btn {
   text-align: center;
-  color: #232323;
-  margin-bottom: 0px;
+  width: 100%;
 }
-.cid-tDeueJXsIc .mbr-section-labels {
-  color: #232323;
-  padding: 0;
-  margin-bottom: .357em;
-  text-align: left;
-}
-.cid-tDeueJXsIc .mbr-section-autorespond {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
-}
-.cid-tDeueJXsIc .mbr-section-gdpr {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
-}
-.cid-tDeueJXsIc .alert {
-  margin-bottom: 0;
-}
-.cid-tDeueJXsIc .alert-success {
-  background-color: #70c770;
-}
-.cid-tDeueJXsIc .alert-danger {
-  background-color: #ff4a52;
-}
-.cid-tDeueJXsIc .btn {
+.cid-tDeH8YQJ2x form .mbr-section-btn .btn {
   display: inline-flex;
 }
-.cid-tDeueJXsIc .mbr-alert-success {
-  text-align: center;
-  color: #ffffff;
+@media (max-width: 991px) {
+  .cid-tDeH8YQJ2x form .mbr-section-btn .btn {
+    width: 100%;
+  }
 }
-.cid-tDeueJXsIc .mbr-alert-danger {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-tDeueJXsIc H2 {
-  color: #000000;
+.cid-tDeH8YQJ2x textarea {
+  min-height: 10rem;
 }
 .cid-tAGaz5RBck {
   padding-top: 7rem;
